--- a/requirements.txt
+++ b/requirements.txt
@@ -5,12 +5,12 @@ Django==4.1.3
 django-cors-headers==3.13.0
 django-environ==0.9.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 exceptiongroup==1.0.4
 gunicorn==20.1.0
 iniconfig==1.1.1
 packaging==21.3
 pluggy==1.0.0
-PyJWT==2.6.0
 pyparsing==3.0.9
 pytest==7.2.0
 pytz==2022.6
